--- a/requirements.txt
+++ b/requirements.txt
@@ -41,3 +41,11 @@ python-dotenv>=1.0.0
 
 # Type Hints
 typing-extensions>=4.8.0
+
+# Advanced Tensor Networks (Phase 2)
+jax>=0.4.0
+jaxlib>=0.4.0
+
+# Additional Performance Libraries
+opt-einsum>=3.3.0
+memory-profiler>=0.61.0
